- Open most recent file on startup [mist]
- 40% faster syntax highlighting
- Find in files: selecting tune focused wrong tune sometimes
- ABC settings: Added 'Separate defaults per voice' checkbox to Voices tab
- ABC assist supports %%barnumbers (better to use %%measurenb instead)
- ABC assist supports %%percmap (similar to %%MIDI drummap)
- General MIDI 2 percussion instruments added to %%MIDI drummap
- ABC assist supports !marcato! and !editoral!
- Added Copy to Tune list right button menu
- Update to abc2xml version 233
- Chinese translation added (thanks Wu Xiaotian)
- ABC settings: appears slightly faster and some space was added between controls and the border
- Removed 'Insert musical symbol' from the menu and the toolbar.
  On Linux (Gnome) these menus were empty and ABC Assist does a better job of inserting symbols
- Fixed sliders on toolbar (Linux, Raspberry Pi)

1.3.8.5
- Export MIDI no longer includes the markers which are used for follow score
- Added tablet mode: when music score is maximized
    - Right click on score panel toggles full screen mode (Shift-Alt-F)
    - Left click on right third of the screen turns to next page
    - Left click on left third of the screen turns to previous page
    - Left click on bottom third of the screen turns to next tune
    - Left click on top third of the screen turns to previous tune
- Fixed: follow score stopped working when screen in portrait mode

1.3.8.6
- The installer now removes old files from a previous installation (1.3.8 or older)
  This fixes the 'ImportError: DLL load failed while importing _html' error some users experienced.
- Updated FluidSynth Windows binaries to latest version (2.2.4)
- Fixed tab order in ABC settings menu
- Escape key exits full screen mode

1.3.8.7
- Removed pyparsing.py (use 'pip install pyparsing' or 'sudo apt install python3-pyparsing' to fix pyparsing errors)
- Added message that Python 2 is no longer supported